# cellplugin

./: CMakeLists.txt  README.md  cell-airplay.cpp  cell-plugin.cpp  cell-vcam.cpp
data/locale/: zh-CN.ini
libairplay/: airplayfuncs.cpp  net.c  net.h
libvcam/: vcam.cpp  vcam.h  vcam_strm.h  vcam_strm.lib
libvcam/librelease/: vcam_strm.lib
utils/: netpipe.cpp
